Download all begin

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//scrapyspider/middlewares.py=utf-8
 encoding//scrapyspider/pipelines.py=utf-8
+encoding//scrapyspider/spiders/cninfospider.py=utf-8
